add Login (cookie)

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,6 +2,16 @@
     grid-area: h;
     background-color: green;
 }
+
 .header img {
-    width: 20px ;
+    width: 20px;
+}
+
+.loginBlock {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.loginBlock a {
+    color: white;
 }
