--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,5 +1,34 @@
 .postsBlock {
-    padding: 10px;
+    padding: 20px;
+}
+
+.postsBlock h3 {
+    font-size: 20px;
+}
+
+.postsBlock textarea {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 20px;
+    width: 50%;
+    padding: 15px;
+    resize: none;
+    border-radius: 15px;
+    border: none;
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.05);
+    height: 150px;
+    outline: none;
+}
+
+.postsBlock button {
+    margin-left: 10px;
+    font-size: 13px;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(161, 158, 158);
+    color: white;
+    cursor: pointer;
 }
 
 .posts {
