--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,7 +1,56 @@
-.userPhoto {
-    width: 150px;
-    height: 150px;
+.usersInfo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 20px;
 }
+
+.userPhoto {
+    width: 200px;
+    height: 200px;
+    border-radius: 15px;
+}
+
+.pages {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 50px;
+    padding: 10px;
+}
+
+.pages a{
+    cursor: pointer;
+    font-size: 22px;
+    font-weight: 700;
+    margin: 2px;
+}
+
 .selectedPage {
-    font-weight: bold;
+    color: #61dafb;
+}
+
+.btn {
+    margin-top: 10px;
+    font-size: 13px;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(161, 158, 158);
+    color: white;
+    cursor: pointer;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin: 10px;
+}
+
+.about{
+    margin-top: 5px;
+    font-size: 15px;
+    font-weight: 600;
 }
