--- a/src/components/common/Pginator/Paginator.module.css
+++ b/src/components/common/Pginator/Paginator.module.css
@@ -16,3 +16,15 @@
 .selectedPage {
     color: #61dafb;
 }
+
+button {
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 13px;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(161, 158, 158);
+    color: white;
+    cursor: pointer;
+}
